Rectify network config error for Code_submit_Digital_Twins_Framework_For_Motorways project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ __pycache__
 transport-digital-twin-communication-architecture/consumed_topics/
 transport-digital-twin-communication-architecture/test_results/
 
+Code_submit_Digital_Twins_Framework_For_Motorways/fulloutput.xml
+Code_submit_Digital_Twins_Framework_For_Motorways/statistic.xml
+Code_submit_Digital_Twins_Framework_For_Motorways/tripinfo.xml
+
