modified simulation time & added output result files

--- a/ITSC2020_CAV_impact/Motorway/Simulations/Base/M50_simulation_1.sumo.cfg
+++ b/ITSC2020_CAV_impact/Motorway/Simulations/Base/M50_simulation_1.sumo.cfg
@@ -7,20 +7,18 @@
 		<additional-files value="vtypes.add.xml,M50_routes.rou.xml,M50_emitters.emi.xml,M50_detectors.poi.xml"/>
     </input>
 
-    
     <output>
-        <netstate-dump value="nestate_pe.xml"/>
-        <full-output value="fulloutput_pe.xml"/>
-        <tripinfo-output value="tripinfo_pe.xml"/>
+        <full-output value="fulloutput.xml"/>
+        <tripinfo-output value="tripinfo.xml"/>
         <tripinfo-output.write-unfinished value="true"/>
-        <statistic-output value="statistic_pe.xml"/>
+        <statistic-output value="statistic.xml"/>
     </output>
 
 	
     <time>
         <begin value="32400"/>
         <end value="33300"/>
-        <step-length value="0.5"/>
+        <step-length value="1"/>
     </time>
 
 	<processing>
@@ -28,7 +26,7 @@
 		<collision.mingap-factor value="0"/>
 	</processing>
 
-    <ssm_device>
+     <ssm_device>
         <device.ssm.probability value="1"/>
         <device.ssm.deterministic value="true"/>
         <device.ssm.measures value="TTC PET"/>
@@ -41,7 +39,11 @@
     </ssm_device>
 
     <traci_server>
-        <remote-port value="57790"/>
+        <remote-port value="51709"/>
     </traci_server>
+
+    <gui_only>
+        <delay value="1000"/>
+    </gui_only>
 
 </configuration>
